# gameport

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build.sh
.github/workflows/: ci.yml  release.yml
games/: linux-games-to-test.md  wishlist.md
src/: catalog.c  catalog.h  install.c  install.h  main.c  platform.h  platform_posix.c  platform_win32.c  term.c  term.h  ui.c  ui.h  util.c  util.h
src/core/: catalog.c  catalog.h  install.c  install.h  platform.h  platform_posix.c  platform_win32.c  util.c  util.h
src/games/: anarch.c  angband.c  armagetron.c  asteroids.c  brogue.c  cataclysm_dda.c  cdogs.c  chess_tui.c  chocolate_doom.c  classicube.c  colobot.c  dcss.c  endless_sky.c  flare.c  freeciv.c  freeorion.c  hedgewars.c  hurrican.c  luanti.c  megaglest.c  mindustry.c  minesweeper.c  naev.c  nethack.c  openclonk.c  openra.c  opensurge.c  openttd.c  pioneer.c  pokerth.c  recwars.c  red_eclipse.c  registry.c  sdlpop.c  shattered_pd.c  space_invaders.c  speed_dreams.c  srb2.c  supertux.c  supertuxkart.c  (+14 more)
src/ui/: term.c  ui.c  ui.h
